--- a/db-migration/pom.xml
+++ b/db-migration/pom.xml
@@ -13,14 +13,26 @@
         <profile>
             <id>local-db-main</id>
             <properties>
-                <liquibase.url>jdbc:postgresql://localhost:5432/hanabi</liquibase.url>
+                <liquibase.url>jdbc:postgresql://localhost:5432/filthy_db</liquibase.url>
                 <liquibase.username>postgres</liquibase.username>
-                <liquibase.password>root</liquibase.password>
+                <liquibase.password></liquibase.password>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
+
+        <profile>
+        <id>prod-db-main</id>
+        <properties>
+            <liquibase.url>jdbc:postgresql://:5432/hanabi</liquibase.url>
+            <liquibase.username>postgres</liquibase.username>
+            <liquibase.password>root</liquibase.password>
+        </properties>
+        <activation>
+            <activeByDefault>false</activeByDefault>
+        </activation>
+    </profile>
     </profiles>
 
     <dependencies>
