trash commit, doesn't working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.datasource.tomcat.max-active=50
 
 # Validate the connection before borrowing it from the pool.
 spring.datasource.tomcat.test-on-borrow=true
+
+
+#find and delete
+spring.liquibase.enabled=false
+
+#name of package of bean dto etc
+mybatis.typeAliasesPackage=ru.shitandsticks.filthchat.data
+#name of xml mapper location
+mybatis.mapperLocations=classpath:mybatis/mapper/*Mapper.xml
